<resources>
    <string name="app_name">Pokebreed</string>
    <string-array name="strarr">
        <item>First</item>
        <item>Second</item>
    </string-array>

    <string name="spinnertitle">
        Select Pokemon
    </string>
    <string-array name="Stats">
        <item>HP:</item>
        <item>Speed:</item>
        <item>Attack:</item>
        <item>Defense:</item>
        <item>Special-Attack:</item>
        <item>Special-Defense:</item>
    </string-array>


    <string-array name="DVValues">
        <item>no good (0)</item>
        <item>decent (1-15)</item>
        <item>pretty good (16-25)</item>
        <item>very good (26-29)</item>
        <item>fantastic (30)</item>
        <item>best (31)</item>
    </string-array>

    <string-array name="Natures">
        <item>Choose nature</item>
        <item>Random</item>
        <item>Hardy</item>
        <item>Lonely (+Atk, -Def)</item>
        <item>Brave (+Atk, -Spe)</item>
        <item>Adamant (+Atk, -Sp. Atk)</item>
        <item>Naughty (+Atk, -Sp. Def)</item>
        <item>Docile</item>
        <item>Bold (+Def, -Atk)</item>
        <item>Relaxed (+Def, -Spe)</item>
        <item>Impish (+Def, -Sp. Atk)</item>
        <item>Lax (+Def, -Sp. Def)</item>
        <item>Serious</item>
        <item>Timid (+Spe, -Atk)</item>
        <item>Hasty (+Spe, -Def)</item>
        <item>Jolly (+Spe, -Sp. Atk)</item>
        <item>Naive (+Spe, -Sp.  Def)</item>
        <item>Bashful</item>
        <item>Modest (+Sp. Atk, -Atk)</item>
        <item>Mild (+Sp. Atk, -Dev)</item>
        <item>Quiet (+Sp. Atk, -Spe)</item>
        <item>Rash (+Sp. Atk, -Sp. Def)</item>
        <item>Quuirky</item>
        <item>Calm (+Sp. Def, -Atk)</item>
        <item>Gentle (+Sp. Def, -Def)</item>
        <item>Sassy (+Sp. Def, -Spe)</item>
        <item>Careful (+Sp.Def, -Sp. Atk)</item>
    </string-array>


    <string name="Pokemon" translatable="false">Pokemon</string>
    <string name="DVValues">DVValues</string>
    <string name="Natures">Natures</string>
    <string name="Pyp">Pick your Pokemon</string>
    <string name="selectedPokemon">selected Pokemon:</string>
    <string name="Determinatedvalues">Determinated values</string>
    <string name="Setallbest">Set all Best</string>
    <string name="Hp">Hp</string>
    <string name="Attack">Attack</string>
    <string name="Defense">Defense</string>
    <string name="Sp.Attack">Sp. Attack</string>
    <string name="Sp.Defense">Sp. Defense</string>
    <string name="Speed">Speed</string>
    <string name="SavePokemon">Save the Pokemon?</string>
    <string name="save">save</string>
    <string name="dontsave">don\'t save</string>
    <string name="newPokemon">new Pokemon</string>
    <string name="History">History</string>
    <string name="Information">Information</string>
    <string name="Darkmode">Darkmode</string>
    <string name="Lightmode">Lightmode</string>
    <string name="Mother">Mother</string>
    <string name="Father">Father</string>
    <string name="LearnedAttack">Learned move</string>
    <string name="Ability">Ability</string>
    <string name="DvInfo">For your selected Dv\'s get as close as possible to:</string>
    <string name="historypoke">There are no Pokemon saved</string>
    <string name="Type">Type</string>
    <string name="selectMove">select Move</string>
    <string name="selectAbility">selct ability</string>
    <string name="anotherPkmn">Please choose another Pokemon</string>
    <string name="unknownAbility">Please choose an Ability</string>
    <string name="youChoose">You choose:</string>
    <string name="selectItem">Select item</string>
    <string name="selectMFirst">Select mother first</string>
    <string name="noItemsNeeded">no items needed</string>
    <string name="selectFather">select Father</string>
    <string name="selectMother">select mother</string>
    <string name="checkValues">Please check your inputs</string>
    <string name="noMatter">no matter</string>
    <string name="ReminderText">Time for some Pokemon breeding?</string>
    <string name="ReminderTitle">Your next Pokemon awaits you</string>
    <string name="Exit">done</string>


</resources>