<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?android:colorPrimary"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_ball"
        app:tint="#83838383" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_blueball"
        app:tint="#83838383" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ExitandSafe"
        app:srcCompat="@drawable/ic_masterball" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="5dp"
        android:text="@string/Mother"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:text="@string/Father"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <ImageView
        android:id="@+id/MotherpokemonPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MotherSpinner"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/LearnedAttack"
        app:layout_constraintStart_toEndOf="@+id/MotherpokemonPic"
        app:layout_constraintTop_toBottomOf="@+id/text_View2" />

    <TextView
        android:id="@+id/m_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/text_View2" />

    <ImageView
        android:id="@+id/mItemImage"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toEndOf="@+id/MotherpokemonPic"
        app:layout_constraintTop_toBottomOf="@+id/MotherSpinner"
        tools:srcCompat="@tools:sample/avatars" />

    <Spinner
        android:id="@+id/MotherSpinner"
        android:layout_width="367dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/FatherpokemonPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FatherSpinner"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:text="@string/DvInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/LearnedAttack"
        app:layout_constraintStart_toEndOf="@+id/FatherpokemonPic"
        app:layout_constraintTop_toBottomOf="@+id/Text_View34" />

    <TextView
        android:id="@+id/f_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/Text_View34" />

    <ImageView
        android:id="@+id/fItemImage"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toEndOf="@+id/MotherpokemonPic"
        app:layout_constraintTop_toBottomOf="@+id/FatherSpinner"
        tools:srcCompat="@tools:sample/avatars" />

    <Spinner
        android:id="@+id/FatherSpinner"
        android:layout_width="367dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Spinner
        android:id="@+id/MotherItemSpinner"
        android:layout_width="176dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/mItemImage"
        app:layout_constraintTop_toBottomOf="@+id/MotherSpinner"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/FatherItemSpinner"
        android:layout_width="176dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/fItemImage"
        app:layout_constraintTop_toBottomOf="@+id/FatherSpinner"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ExitandSafe"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_fullround"
        android:text="@string/Exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/Natures"
        app:layout_constraintStart_toEndOf="@+id/MotherpokemonPic"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/MotherNature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/Natures"
        app:layout_constraintStart_toEndOf="@+id/FatherpokemonPic"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/FatherNature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/Text_View34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="3dp"
        android:text="@string/Ability"
        app:layout_constraintStart_toEndOf="@+id/FatherpokemonPic"
        app:layout_constraintTop_toBottomOf="@+id/fItemImage" />

    <TextView
        android:id="@+id/text_View2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="3dp"
        android:text="@string/Ability"
        app:layout_constraintStart_toEndOf="@+id/MotherpokemonPic"
        app:layout_constraintTop_toBottomOf="@+id/mItemImage" />

    <TextView
        android:id="@+id/m_ability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/text_View2"
        app:layout_constraintTop_toBottomOf="@+id/mItemImage" />

    <TextView
        android:id="@+id/f_ability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/Text_View34"
        app:layout_constraintTop_toBottomOf="@+id/fItemImage" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="_ _ _ _ _"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="_ _ _ _ _"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView8" />

    <TableLayout
        android:id="@+id/dvTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hp" />

            <TextView
                android:id="@+id/f_KP_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="0" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sp.Attack" />

            <TextView
                android:id="@+id/f_SPAtk_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Attack" />

            <TextView
                android:id="@+id/f_Atk_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="0" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/Sp.Defense" />

            <TextView
                android:id="@+id/f_SpDef_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/Defense" />

            <TextView
                android:id="@+id/f_Def_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="0" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Speed" />

            <TextView
                android:id="@+id/f_Spe_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>